--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -8,11 +8,16 @@ server:
 eureka:
   instance:
     hostname: localhost
+  server:
+#    enable-self-preservation: false  #no need close self protection
+    eviction-interval-timer-in-ms: 4000  #close interval(ms)
   client:
     registerWithEureka: false
     fetchRegistry: false
     serviceUrl:
       defaultZone: http://${eureka.instance.hostname}:${server.port}/eureka/
+      registerWithEureka: false
+      fetchRegistry: false
 
       
       
