--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -9,15 +9,15 @@ eureka:
   instance:
     hostname: localhost
   server:
-#    enable-self-preservation: false  #no need close self protection
-    eviction-interval-timer-in-ms: 4000  #close interval(ms)
+    enable-self-preservation: false  #no need close self protection default=true
+    eviction-interval-timer-in-ms: 5000  #close interval(ms) default=60000ms
   client:
     registerWithEureka: false
     fetchRegistry: false
     serviceUrl:
       defaultZone: http://${eureka.instance.hostname}:${server.port}/eureka/
-      registerWithEureka: false
-      fetchRegistry: false
+#      registerWithEureka: false
+#      fetchRegistry: false
 
       
       
